# Docket

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  calendar-write-gate-verification.md  deviations.md  milestone-2.5-verification.md  milestone-3-verification.md  milestone-3.5-verification.md  milestone-3.6-carousel-verification.md  milestone-3.6-verification.md  operations-runbook.md  pinned-integration-contracts.md
hermes/: config.example.yaml
hermes/prompts/: docket-chat.md
migrations/: env.py
migrations/versions/: 0001_milestone_1_core.py  0002_milestone_2_calendar.py  0003_calendar_link_snapshot.py  0004_discord_projection_capability.py  0005_milestone_3_queue.py  0006_calendar_read_model.py  0007_channel_lane_routing.py  0008_calendar_control_closure.py  0009_schedule_source_provenance.py  0010_discord_review_carousel.py
scripts/: compose-mcp-smoke.py  prepare-hermes-home.sh  setup-google-oauth.sh  smoke.sh  sync_hermes_docket_config.py
searxng/: settings.yml
secrets/: README.md
secrets/local/: README.md
secrets/smoke/: discord_bot_token  docket_to_hermes_token  google_oauth_client.json  google_oauth_token.json  hermes_to_docket_token  interaction_signing_key
src/docket/: __init__.py  config.py  database.py  google_oauth_cli.py  main.py  production_config.py
tests/: conftest.py
tests/adversarial/: test_plugin_actor_gate.py  test_untrusted_inputs.py
tests/integration/: test_calendar_operations.py  test_calendar_read_model.py  (+8 more)
(+81 files in other folders)
