[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "docket-ops"
version = "0.1.0"
description = "Durable personal operations service for Hermes Agent"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.2",
  "google-auth-oauthlib==1.4.0",
  "httpx==0.28.1",
  "mcp==1.28.1",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "structlog==26.1.0",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "ruff==0.15.22",
]

[project.scripts]
docket = "docket.main:run"
docket-google-auth = "docket.google_oauth_cli:main"
docket-production-config = "docket.production_config:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docket"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: tests across application boundaries",
  "adversarial: security and untrusted-input tests",
  "live: requires explicit real external credentials",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["docket"]
